# data-pull

./: .env.example  .gitignore  README.md  SUMMARY.md  analyze_bike_potential.py  clean_fetch.py  flag_bike_events.py  import_events.py  pyproject.toml  run_migration.py  sags_uns_categories_3level.csv
migrations/: 001_create_events_table.sql  002_validate_data.sql  003_disable_rls_for_import.sql
